添加单例工厂代码